--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,8 @@ jdk: oraclejdk8
 os: linux
 sudo: false
 
-env:
-- MAVEN_VERSION=3.3.9
-
-script:
-- mvn --show-version --errors --batch-mode clean verify
+script: mvn --show-version --errors --batch-mode clean verify
 
 cache:
   directories:
-  - $HOME/.m2
+   - $HOME/.m2
