move license to manifest file

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
                         </manifest>
                         <manifestEntries>
                             <Built-By>${user.name}</Built-By>
+                            <License>MIT License</License>
                         </manifestEntries>
                     </archive>
                 </configuration>
